--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.codingwithmitch.cleannotes">
+    xmlns:tools="http://schemas.android.com/tools"
+   >
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -15,6 +16,7 @@
         >
 
         <activity
+            android:exported="true"
             android:name="com.codingwithmitch.cleannotes.framework.presentation.MainActivity"
             android:windowSoftInputMode="adjustPan"
             >
