--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,7 @@
-import dependencies.Versions
-import dependencies.Build
+plugins {
+    id("com.android.application") version "8.2.0" apply false
+    id("org.jetbrains.kotlin.android") version "1.9.0" apply false
 
-
-buildscript {
-    ext.kotlin_version = Versions.kotlin
-
-    repositories {
-        google()
-        jcenter()
-    }
-    dependencies {
-        classpath Build.build_tools
-        classpath Build.kotlin_gradle_plugin
-        classpath Build.google_services
-        classpath Build.crashlytics_gradle
-    }
-}
-
-allprojects {
-    repositories {
-        google()
-        jcenter()
-
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+    id( "com.google.gms.google-services") version "4.3.15" apply false
+    id( "com.google.firebase.crashlytics") version "2.9.5"  apply false
 }
